--- a/angular-material.css
+++ b/angular-material.css
@@ -5,7 +5,7 @@
  * v1.0.0-rc4
  */
 html, body {
-  min-height: 100%;
+  height: 100%;
   color: rgba(0, 0, 0, 0.87);
   background: white;
   position: relative; }
@@ -5799,7 +5799,7 @@ md-autocomplete {
       color: #fff; } }
 
 .md-virtual-repeat-container.md-autocomplete-suggestions-container {
-  position: absolute;
+  position: fixed;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
   height: 225.5px;
   max-height: 225.5px;
