--- a/angular-material.scss
+++ b/angular-material.scss
@@ -258,7 +258,7 @@ $button-fab-padding: rem(1.60) !default;
 }
 
 html, body {
-  min-height: 100%;
+  height: 100%;
   color: rgba(0,0,0,0.87);
   background: white;
   position: relative;
@@ -1170,7 +1170,7 @@ md-autocomplete {
 }
 
 .md-virtual-repeat-container.md-autocomplete-suggestions-container {
-  position: absolute;
+  position: fixed;
   box-shadow: 0 2px 5px rgba(black, 0.25);
   height: 41px * 5.5;
   max-height: 41px * 5.5;
