--- a/modules/js/autocomplete/autocomplete.css
+++ b/modules/js/autocomplete/autocomplete.css
@@ -188,7 +188,7 @@ md-autocomplete {
       color: #fff; } }
 
 .md-virtual-repeat-container.md-autocomplete-suggestions-container {
-  position: absolute;
+  position: fixed;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
   height: 225.5px;
   max-height: 225.5px;
