--- a/modules/js/core/core.css
+++ b/modules/js/core/core.css
@@ -5,7 +5,7 @@
  * v1.0.0-rc4
  */
 html, body {
-  min-height: 100%;
+  height: 100%;
   color: rgba(0, 0, 0, 0.87);
   background: white;
   position: relative; }
